[Quan][Account] thêm trang quên mật khẩu và làm lại mật khẩu ok

--- a/coffee_project/src/main/resources/application.properties
+++ b/coffee_project/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.show-sql=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=Ngoquan0807@gmail.com
-spring.mail.password=Quan0807
+spring.mail.password=ctfcpkolxdwhzxrx
 
 # TLS Configuration (optional)
 spring.mail.properties.mail.smtp.starttls.enable=true
