--- a/coffee_project/src/main/resources/application.properties
+++ b/coffee_project/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.jpa.show-sql=true
 # SMTP Server Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=Ngoquan0807@gmail.com
-spring.mail.password=ctfcpkolxdwhzxrx
+spring.mail.username="Ngoquan0807@gmail.com"
+spring.mail.password="Quan0807"
 
 # TLS Configuration (optional)
 spring.mail.properties.mail.smtp.starttls.enable=true
